--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,7 @@ authors = ["Lokathor <zefria@gmail.com>"]
 categories = ["no-std", "development-tools::ffi"]
 edition = "2018"
 license = "Zlib OR Apache-2.0 OR MIT"
-
-[target.'cfg(not(any(windows, all(target_arch = "wasm32",not(any(target_env = "wasi", target_env = "emscripten"))))))'.dependencies]
-libc = { version = "0.2", default-features = false }
+repository = "https://github.com/Lokathor/chlorine"
 
 [badges]
 appveyor = { repository = "Lokathor/chlorine" }
