rename CI task.

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,7 +1,7 @@
 name: Rust
 
 jobs:
-  build_test_no_features:
+  test:
     runs-on: [ubuntu-latest, windows-latest, mac-latest]
     strategy:
       matrix:
