--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest, mac-latest]
+        os: [ubuntu-latest, windows-latest, macOS-latest]
         toolchain: [1.31.0, stable, beta, nightly]
     steps:
     - uses: actions/checkout@v1
