--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "chlorine"
 description = "Just the C types for `no_std`, but builds faster."
-version = "1.0.8-alpha.0"
+version = "1.0.8"
 authors = ["Lokathor <zefria@gmail.com>"]
 edition = "2018"
 license = "Zlib OR Apache-2.0 OR MIT"
